--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,15 @@
 apply plugin: 'com.android.application'
 
+
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
     defaultConfig {
-        applicationId "com.kimosop.myrestaurants"
+        applicationId "io.github.vinge1718.restaurant"
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    testOptions {
-        unitTests {
-            includeAndroidResources = true
-        }
     }
     buildTypes {
         release {
@@ -21,14 +17,28 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //Robolectric dependencies
     testImplementation "org.robolectric:robolectric:3.8"
+
+    //Espresso dependencies
+    androidTestImplementation "com.android.support.test:rules:1.0.2"
+
+    //butterknife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
