--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        repositories {
+            jcenter()
+//Note: if you are planning to use the google() , you need Gradle 4.x+, Android Studio 3.x+ and Gradle plugin for Android 3.x+.
+            maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        }
         
     }
 }
